--- a/src/pages/campaigns/item.ejs
+++ b/src/pages/campaigns/item.ejs
@@ -1,7 +1,7 @@
 <% layout('../layouts/main') %>
 
 <h1><%= it.data.title %></h1>
-<p><%~ it.data.summary %></p>
+<p><%~ it.format(it.data.summary) %></p>
 
 <h2>Adventures</h2>
 <section class="grid">
