--- a/src/pages/systems/item.ejs
+++ b/src/pages/systems/item.ejs
@@ -1,7 +1,7 @@
 <% layout('../layouts/main') %>
 
 <h1><%= it.data.title %></h1>
-<%~ it.data.summary %>
+<%~ it.format(it.data.summary) %>
 
 <h2>Adventures</h2>
 <% if(it.data.adventures.length) { %>
