--- a/src/pages/layouts/main.ejs
+++ b/src/pages/layouts/main.ejs
@@ -26,7 +26,8 @@
 	<span><a href="/">RPG Adventures</a></span>
 	<search>
 		<form>
-			<input type="search" />
+			<input id="search" type="search" placeholder="Search..." />
+			<span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></span>
 		</form>
 	</search>
 </header>
@@ -57,6 +58,19 @@
 	</nav>
 	<main><%~ it.body %></main>
 </div>
+
+<script>
+
+addEventListener('load', () => {
+	const search = document.getElementById('search')
+
+	search.addEventListener('keyup', () => {
+		console.log(search.value)
+	})
+
+})
+
+</script>
 
 </body>
 </html>
