--- a/src/pages/layouts/main.ejs
+++ b/src/pages/layouts/main.ejs
@@ -28,6 +28,7 @@
 		<form>
 			<input id="search" type="search" placeholder="Search..." />
 			<span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></span>
+			<menu id="results" class="hidden"></menu>
 		</form>
 	</search>
 </header>
@@ -61,13 +62,75 @@
 
 <script>
 
-addEventListener('load', () => {
-	const search = document.getElementById('search')
+const throttle = (callback, time = 250) => {
+	let timer = null
 
-	search.addEventListener('keyup', () => {
-		console.log(search.value)
+	return value => {
+		if(timer !== null) {
+			window.clearTimeout(timer)
+		}
+
+		timer = window.setTimeout(() => {
+			callback(value);
+		}, time);
+	}
+};
+
+addEventListener('load', () => {
+	let lastCall = ''
+
+	const searchHandler = throttle(async input => {
+		input = input.trim()
+
+		if(input.length < 3 || input === lastCall) return
+
+		lastCall = input
+
+		const response = await fetch(`/search/${encodeURIComponent(input)}`, {
+			headers: {
+				'Content-Type': 'application/json'
+			}
+		})
+
+		const results = await response.json()
+
+		while(searchResults.firstChild) {
+			searchResults.removeChild(searchResults.lastChild)
+		}
+
+		results.forEach(row => {
+			const list = document.createElement('li')
+			const link = document.createElement('a')
+
+			link.setAttribute('href', row.slug)
+			link.innerText = row.title
+
+			list.appendChild(link)
+			searchResults.appendChild(list)
+		})
+
+		searchResults.classList.remove('hidden')
 	})
 
+	const searchInput = document.getElementById('search')
+	const searchResults = document.getElementById('results')
+
+	searchInput.addEventListener('keyup', () => {
+		searchHandler(searchInput.value)
+	})
+
+	searchInput.addEventListener('focus', () => {
+		if(searchInput.value.trim() !== '') {
+			searchHandler(searchInput.value)
+		}
+	})
+
+	searchInput.addEventListener('blur', () => {
+		window.setTimeout(() => {
+			searchResults.classList.add('hidden')
+			lastCall = ''
+		}, 100)
+	})
 })
 
 </script>
