--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -50,6 +50,14 @@ dl {
 	grid-template-columns: var(--definition-width) auto;
 }
 
+/* Hide and show */
+.hidden {
+	display: none;
+}
+.invisble {
+	invisibility: hidden;
+}
+
 /* Default icon size */
 .icon {
 	display: inline-block;
@@ -127,6 +135,7 @@ header {
 search {
 	padding: var(--spacing-4) 0;
 	color: var(--zinc-300);
+	position: relative;
 
 	input {
 		padding: var(--spacing-1) var(--spacing-2);
@@ -139,6 +148,28 @@ search {
 
 		&:focus {
 			outline: 2px solid var(--link-text);
+		}
+	}
+
+	#results {
+		position: absolute;
+		background-color: var(--tertiary-bg);
+		color: var(--tertiary-text);
+		border: 1px solid var(--tertiary-border);
+		box-shadow: var(--shadow-lg);
+		border-radius: 0.5rem;
+		overflow: hidden;
+
+		a {
+			display: block;
+			padding: var(--spacing-2) var(--spacing-4);
+			color: var(--tertiary-text);
+
+			&:hover {
+				color: var(--tertiary-text-hover);
+				background-color: var(--tertiary-bg-hover);
+				text-decoration: none;
+			}
 		}
 	}
 }
