Refactored search to use dataQ

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -151,7 +151,7 @@ search {
 		}
 	}
 
-	#results {
+	menu {
 		position: absolute;
 		background-color: var(--tertiary-bg);
 		color: var(--tertiary-text);
