Added responsive debug code

--- a/src/pages/layouts/main.ejs
+++ b/src/pages/layouts/main.ejs
@@ -64,6 +64,8 @@
 	<main><%~ it.body %></main>
 </div>
 
+<div id="responsive" data-xs="X-Small" data-sm="Small" data-md="Medium" data-lg="Large" data-xl="X-Large" data-2xl="XX-Large"></div>
+
 <script type="module" src="/js/main.js"></script>
 
 </body>
