Added character layout and relationships

--- a/src/pages/layouts/main.ejs
+++ b/src/pages/layouts/main.ejs
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-<header id="header" class="container">
+<header id="site-header" class="container">
 	<span><a href="/">RPG Adventures</a></span>
 	<search data-q-component="search">
 		<form>
