--- a/src/pages/layouts/main.ejs
+++ b/src/pages/layouts/main.ejs
@@ -27,7 +27,7 @@
 	<search data-q-component="search">
 		<form>
 			<input type="search" placeholder="Search..." data-q-blur="handleBlur" data-q-focus="handleFocus" data-q-keyup="handleKeyup" />
-			<span class="icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" /></svg></span>
+			<%~ include('../components/icon', { icon: 'search' }) %>
 			<menu data-q-store="searchResults" data-q-class="menuClass">
 				<li data-q-each="all">
 					<a data-q-href="slug" data-q-text="title"></a>
@@ -38,9 +38,10 @@
 </header>
 
 <div id="content" class="container">
-	<nav id="primary">
+	<nav>
 		<%~ include('../components/menu', {
 			menu: {
+				icon: 'dice',
 				title: 'System',
 				url: '/systems',
 				items: it.systems,
@@ -48,6 +49,7 @@
 		}) %>
 		<%~ include('../components/menu', {
 			menu: {
+				icon: 'group',
 				title: 'Campaign',
 				url: '/campaigns',
 				items: it.campaigns,
@@ -55,6 +57,7 @@
 		}) %>
 		<%~ include('../components/menu', {
 			menu: {
+				icon: 'shield',
 				title: 'Adventure',
 				url: '/adventures',
 				items: it.adventures,
