--- a/src/pages/adventures/list.ejs
+++ b/src/pages/adventures/list.ejs
@@ -2,8 +2,43 @@
 
 <h1>Adventures</h1>
 
-<ul>
-	<% it.data.forEach(item => { %>
-		<li><a href="<%= item.slug %>"><%= item.title %></a></li>
-	<% }) %>
-</ul>
+<table>
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>System</th>
+			<th>Campaign</th>
+			<th>Setting</th>
+			<th>Created</th>
+			<th>Modified</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% it.data.forEach(item => { %>
+			<tr>
+				<td><a href="<%= item.slug %>"><%= item.title %></a></td>
+				<td>
+					<% if(item.system) { %>
+						<a href="<%= item.system.slug %>"><%= item.system.title %></a>
+					<% } else { %>—<% } %>
+				</td>
+				<td>
+					<% if(item.campaign) { %>
+						<a href="<%= item.campaign.slug %>"><%= item.campaign.title %></a>
+					<% } else { %>—<% } %>
+				</td>
+				<td><%= item.setting %></td>
+				<td>
+					<time datetime="<%= item.created.toISOString() %>">
+						<%= item.created.toLocaleDateString() %>
+					</time>
+				</td>
+				<td>
+					<time datetime="<%= item.modified.toISOString() %>">
+						<%= item.modified.toLocaleDateString() %>
+					</time>
+				</td>
+			</tr>
+		<% }) %>
+	</tbody>
+</table>
