--- a/src/pages/adventures/list.ejs
+++ b/src/pages/adventures/list.ejs
@@ -1,6 +1,6 @@
 <% layout('../layouts/main') %>
 
-<h1>Adventures</h1>
+<h1><%~ include('../components/icon', { icon: 'shield', size: 'lg' }) %> Adventures</h1>
 
 <table>
 	<thead>
