--- a/src/pages/campaigns/list.ejs
+++ b/src/pages/campaigns/list.ejs
@@ -1,6 +1,6 @@
 <% layout('../layouts/main') %>
 
-<h1>Campaigns</h1>
+<h1><%~ include('../components/icon', { icon: 'group', size: 'lg' }) %> Campaigns</h1>
 
 <section class="grid">
 	<% it.data.forEach(card => { %>
