--- a/src/pages/systems/list.ejs
+++ b/src/pages/systems/list.ejs
@@ -1,6 +1,6 @@
 <% layout('../layouts/main') %>
 
-<h1>Systems</h1>
+<h1><%~ include('../components/icon', { icon: 'dice', size: 'lg' }) %> Systems</h1>
 <p>You can find adventures for the following systems.</p>
 <section class="grid">
 	<% it.data.forEach(card => { %>
