--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -95,6 +95,16 @@ table {
 	width: 1.3rem;
 	height: 1.3rem;
 	vertical-align: middle;
+
+	&.sm {
+		width: 1rem;
+		height: 1rem;	
+	}
+
+	&.lg {
+		width: 1.8rem;
+		height: 1.8rem;
+	}
 }
 
 /* Primary grid container with a small left-hand column and a large central column */
