--- a/src/static/css/variables.css
+++ b/src/static/css/variables.css
@@ -34,6 +34,30 @@
 	--spacing-header: 5rem;
 
 	/* Base colours */
+	--stone-50: oklch(98.5% 0.001 106.423);
+	--stone-100: oklch(97% 0.001 106.424);
+	--stone-200: oklch(92.3% 0.003 48.717);
+	--stone-300: oklch(86.9% 0.005 56.366);
+	--stone-400: oklch(70.9% 0.01 56.259);
+	--stone-500: oklch(55.3% 0.013 58.071);
+	--stone-600: oklch(44.4% 0.011 73.639);
+	--stone-700: oklch(37.4% 0.01 67.558);
+	--stone-800: oklch(26.8% 0.007 34.298);
+	--stone-900: oklch(21.6% 0.006 56.043);
+	--stone-950: oklch(14.7% 0.004 49.25);
+
+	--amber-50: oklch(98.7% 0.022 95.277);
+	--amber-100: oklch(96.2% 0.059 95.617);
+	--amber-200: oklch(92.4% 0.12 95.746);
+	--amber-300: oklch(87.9% 0.169 91.605);
+	--amber-400: oklch(82.8% 0.189 84.429);
+	--amber-500: oklch(76.9% 0.188 70.08);
+	--amber-600: oklch(66.6% 0.179 58.318);
+	--amber-700: oklch(55.5% 0.163 48.998);
+	--amber-800: oklch(47.3% 0.137 46.201);
+	--amber-900: oklch(41.4% 0.112 45.904);
+	--amber-950: oklch(27.9% 0.077 45.635);
+
 	--slate-50: oklch(98.4% 0.003 247.858);
 	--slate-100: oklch(96.8% 0.007 247.896);
 	--slate-200: oklch(92.9% 0.013 255.508);
@@ -71,32 +95,33 @@
 	--blue-950: oklch(28.2% 0.091 267.935);
 
 	--header-text: var(--zinc-300);
-	--header-bg: var(--zinc-900);
-	--header-border: var(--zinc-950);
+	--header-text-hover: var(--zinc-100);
+	--header-bg: var(--zinc-950);
+	--header-border: var(--zinc-800);
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--primary-text: var(--zinc-300);
-		--primary-text-hover: var(--zinc-200);
-		--primary-bg: var(--zinc-800);
-		--primary-bg-hover: var(--zinc-600);
-		--primary-border: var(--zinc-600);
+		--primary-text: var(--stone-400);
+		--primary-text-hover: var(--stone-300);
+		--primary-bg: var(--stone-950);
+		--primary-bg-hover: var(--stone-800);
+		--primary-border: var(--stone-900);
 
-		--secondary-text: var(--zinc-400);
-		--secondary-text-hover: var(--zinc-200);
-		--secondary-bg: var(--zinc-900);
-		--secondary-bg-hover: var(--zinc-700);
-		--secondary-border: var(--zinc-950);
+		--secondary-text: var(--stone-300);
+		--secondary-text-hover: var(--stone-200);
+		--secondary-bg: var(--stone-900);
+		--secondary-bg-hover: var(--stone-700);
+		--secondary-border: var(--stone-600);
 
-		--tertiary-text: var(--zinc-300);
-		--tertiary-text-hover: var(--zinc-200);
-		--tertiary-bg: var(--zinc-700);
-		--tertiary-bg-hover: var(--zinc-600);
-		--tertiary-border: var(--zinc-500);
+		--tertiary-text: var(--zinc-200);
+		--tertiary-text-hover: var(--zinc-100);
+		--tertiary-bg: var(--zinc-800);
+		--tertiary-bg-hover: var(--zinc-700);
+		--tertiary-border: var(--zinc-600);
 
-		--link-text: var(--blue-400);
-		--link-text-hover: var(--blue-500);
+		--link-text: var(--amber-500);
+		--link-text-hover: var(--amber-600);
 	}
 }
 
