--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -52,6 +52,7 @@ header#site-header {
 	width: 100vw;
 	display: flex;
 	padding: var(--spacing-2);
+	z-index: 100;
 
 	#logo {
 		flex-grow: 2;
@@ -75,6 +76,7 @@ header#site-header {
 #menu {
 	margin: var(--spacing-1) var(--spacing-2);
 	cursor: pointer;
+	color: var(--header-text);
 }
 
 /* Global search */
@@ -128,10 +130,24 @@ search {
 }
 
 /* Primary nav */
-nav {
+nav#primary {
 	padding: var(--spacing-header) var(--spacing-2) 0;
 	background-color: var(--secondary-bg);
-	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	transform: translateX(-100%);
+
+	&.active {
+		transform: translateX(0);
+		animation: .3s ease-in 0s 1 menu-in;
+	}
+	&.inactive {
+		transform: translateX(-100%);
+		animation: .3s ease-in 0s 1 menu-out;
+	}
 
 	h1 {
 		color: var(--secondary-text-hover);
@@ -179,6 +195,24 @@ nav {
 				background-color: var(--secondary-bg-hover);
 			}
 		}
+	}
+}
+
+/* Menu animations */
+@keyframes menu-in {
+	from {
+		transform: translateX(-100%);
+	}
+	to {
+		transform: translateX(0);
+	}
+}
+@keyframes menu-out {
+	from {
+		transform: translateX(0);
+	}
+	to {
+		transform: translateX(-100%);
 	}
 }
 
